# coldspot

./: .gitignore  Makefile  bug.c  build.sh  buildtime.c  buildtime.h  chroot.sh  coldspot.desktop  hier.c  hier.h  main.c  meson.build  nm2.c  nm2.h  run.sh  transfer.sh  transferconf  ui.c
